--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+NEXT_PUBLIC_SERVER_URL=https://onlineshop-backend-nestjs.onrender.com/
 NEXT_PUBLIC_GEOAPI_KEY=b3388fd99aa24bcb911cf1af6c604d7c
